
syntax = "proto3";

package phase1;


// The Main service definition.
service MainService {
  // Sends a greeting
  rpc Handshake (RequestMessage) returns (ResponseMessage) {}
  rpc SendPacket (RequestMessage) returns (ResponseMessage) {}
  rpc Size (MySize) returns (AccomodateChild){}
  rpc Cluster (ClusterName) returns (ClusterAck){}
}

message ClusterName {
	string clusterName = 1;
}

message ClusterAck {
	string clusterAck = 1;
}

message MySize{
	int32 size = 1;
}

message AccomodateChild{
	string message = 1;
}
message RequestMessage {
  string nodeId = 1;
  string destinationId = 2;
  string message = 3;
  repeated int32 hopIds = 4;
}

message ResponseMessage {
  string nodeId = 1;
  string destinationId = 2;
  string ackMessage = 3;
}
